<resources>
    <string name="app_name">QuietPeopleMeet</string>
    <string name="title_activity_home_page">QuietPeopleMeet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QuietPeopleMeet</string>
    <string name="nav_header_subtitle">Version 0.01 Pre-Alpha</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <!-- Strings for left side navigation drawer, first group -->
    <string name="drawer_main">Main Menu</string>
    <string name="drawer_record">Sound Recorder</string>
    <string name="drawer_send">Send</string>
    <string name="drawer_map">Map</string>

    <!-- Strings for left side navigation drawer, first group -->
    <string name="drawer_group_name">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for RecordFragment -->
    <string name="button_record">Start Recording</string>
    <string name="button_stop">Stop Recording</string>
    <string name="button_amp">Get Amplitude</string>



</resources>
