<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/drawer_record" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_send" />
    </group>

    <item android:title="@string/drawer_group_name">
        <menu>


        </menu>
    </item>

</menu>
